//
//  YourAppUITests.swift
//  YourAppUITests
//
//  Created by Raymond Molina on 13/04/2026.
//

import XCTest

final class YourAppUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    @MainActor
    func testAddTaskUI(){
        let app = XCUIApplication()
        app.launch()
        
        let textfield = app.textFields["AddTaskField"]
        textfield.tap()
        textfield.typeText("New Task")
        
        app.buttons["AddButton"].tap()
        
        XCTAssertTrue(app.staticTexts["New Task"].exists)
    }
}
